chore: preserve jdk8 compatibility